--- a/secp256k1-haskell.cabal
+++ b/secp256k1-haskell.cabal
@@ -4,16 +4,16 @@ cabal-version: 1.24
 --
 -- see: https://github.com/sol/hpack
 
-name:           secp256k1-haskell
+name:           secp256k1-schnorr
 version:        0.6.0
 synopsis:       Bindings for secp256k1
 description:    Sign and verify signatures using the secp256k1 library.
 category:       Crypto
-homepage:       http://github.com/haskoin/secp256k1-haskell#readme
-bug-reports:    https://github.com/haskoin/secp256k1-haskell.git/issues
-author:         Jean-Pierre Rupp
-maintainer:     jprupp@protonmail.ch
-copyright:      (c) 2017 Jean-Pierre Rupp
+homepage:       http://github.com/haskoin/secp256k1-schnorr#readme
+bug-reports:    https://github.com/haskoin/secp256k1-schnorr.git/issues
+author:         Sascha-Oliver Prolic
+maintainer:     saschaprolic@googlemail.com
+copyright:      (c) 2022 Sascha-Oliver Prolic
 license:        MIT
 license-file:   LICENSE
 build-type:     Simple
@@ -23,7 +23,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/haskoin/secp256k1-haskell.git
+  location: https://github.com/haskoin/secp256k1-schnorr.git
 
 flag ecdh
   description: Enable (experimental) ECDH APIs
@@ -100,7 +100,7 @@ test-suite spec
     , hspec
     , monad-par
     , mtl
-    , secp256k1-haskell
+    , secp256k1-schnorr
     , string-conversions ==0.4.*
     , unliftio-core >=0.1.0 && <0.3
   if flag(ecdh)
