--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name: secp256k1-haskell
-version: 0.5.0
+version: 0.6.0
 synopsis: Bindings for secp256k1
 description: Sign and verify signatures using the secp256k1 library.
 category: Crypto
@@ -17,7 +17,7 @@ extra-source-files:
   - README.md
 dependencies:
   - base >=4.9 && <5
-  - base16-bytestring >=0.1.1.6 && <1.1
+  - base16 >=0.3.0.1
   - bytestring >=0.10.8 && <0.11
   - cereal >=0.5.4 && <0.6
   - entropy >=0.3.8 && <0.5
