--- a/secp256k1-haskell.cabal
+++ b/secp256k1-haskell.cabal
@@ -1,11 +1,11 @@
 cabal-version: 1.24
 
--- This file has been generated from package.yaml by hpack version 0.34.2.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 
 name:           secp256k1-haskell
-version:        0.5.0
+version:        0.6.0
 synopsis:       Bindings for secp256k1
 description:    Sign and verify signatures using the secp256k1 library.
 category:       Crypto
@@ -59,13 +59,13 @@ library
   build-depends:
       QuickCheck >=2.9.2 && <2.15
     , base >=4.9 && <5
-    , base16-bytestring >=0.1.1.6 && <1.1
+    , base16 >=0.3.0.1
     , bytestring >=0.10.8 && <0.11
     , cereal >=0.5.4 && <0.6
     , deepseq >=1.4.2 && <1.5
     , entropy >=0.3.8 && <0.5
     , hashable >=1.2.6 && <1.4
-    , string-conversions >=0.4 && <0.5
+    , string-conversions ==0.4.*
     , unliftio-core >=0.1.0 && <0.3
   if flag(ecdh)
     cpp-options: -DECDH
@@ -91,7 +91,7 @@ test-suite spec
       HUnit
     , QuickCheck >=2.9.2 && <2.15
     , base >=4.9 && <5
-    , base16-bytestring >=0.1.1.6 && <1.1
+    , base16 >=0.3.0.1
     , bytestring >=0.10.8 && <0.11
     , cereal >=0.5.4 && <0.6
     , deepseq >=1.4.2 && <1.5
@@ -101,7 +101,7 @@ test-suite spec
     , monad-par
     , mtl
     , secp256k1-haskell
-    , string-conversions >=0.4 && <0.5
+    , string-conversions ==0.4.*
     , unliftio-core >=0.1.0 && <0.3
   if flag(ecdh)
     cpp-options: -DECDH
