test refactor commit

--- a/package.yaml
+++ b/package.yaml
@@ -1,7 +1,7 @@
 name: secp256k1-schnorr
 version: 0.0.1
-synopsis: Bindings for secp256k1
-description: Sign and verify signatures using the secp256k1 library.
+synopsis: Schnorr signatures for secp256k1
+description: Schnorr signatures using the secp256k1 library.
 category: Crypto
 author: Sascha-Oliver Prolic
 maintainer: saschaprolic@googlemail.com
@@ -26,21 +26,13 @@ dependencies:
   - QuickCheck >=2.9.2 && <2.15
   - string-conversions >=0.4 && <0.5
   - unliftio-core >=0.1.0 && <0.3
-when:
-  - condition: flag(ecdh)
-    cpp-options: -DECDH
-  - condition: flag(schnorr)
-    cpp-options: -DSCHNORR
-  - condition: flag(recovery)
-    cpp-options: -DRECOVERY
-  - condition: flag(negate)
-    cpp-options: -DNEGATE
 library:
   source-dirs: src
-  generated-exposed-modules:
-    - Paths_secp256k1_schnorr
   pkg-config-dependencies:
     - libsecp256k1
+  when:
+  - condition: flag(schnorr)
+    cpp-options: -DSCHNORR
 tests:
   spec:
     main: Spec.hs
@@ -55,23 +47,11 @@ tests:
     dependencies:
       - hspec
       - secp256k1-schnorr
-      - monad-par
       - mtl
       - HUnit
+
 flags:
-  negate:
-    description: "Enable tweak negate"
-    manual: true
-    default: false
-  ecdh:
-    description: "Enable (experimental) ECDH APIs"
-    manual: true
-    default: false
   schnorr:
     description: "Enable BIP-340 (Schnorr) APIs"
-    manual: true
-    default: false
-  recovery:
-    description: "Enable signature key recovery APIs"
     manual: true
     default: false
