--- a/package.yaml
+++ b/package.yaml
@@ -20,12 +20,31 @@ dependencies:
   - base16 >=0.3.0.1
   - bytestring >=0.10.8 && <0.11
   - cereal >=0.5.4 && <0.6
+  - cryptohash-sha256 >= 0.11.102.1 && <0.12
   - entropy >=0.3.8 && <0.5
   - deepseq >=1.4.2 && <1.5
+  - DRBG >=0.5.5 && <0.6
   - hashable >=1.2.6 && <1.4
   - QuickCheck >=2.9.2 && <2.15
   - string-conversions >=0.4 && <0.5
   - unliftio-core >=0.1.0 && <0.3
+  - utf8-string >= 1.0.2 && <1.1
+executables:
+  app:
+    source-dirs:      src
+    main:             Main.hs
+    ghc-options:
+      - -fwarn-incomplete-patterns
+      - -threaded
+    dependencies:
+      - secp256k1-schnorr
+    pkg-config-dependencies:
+      - libsecp256k1
+    extra-lib-dirs:
+      - /usr/local/lib
+    when:
+      - condition: flag(schnorr)
+        cpp-options: -DSCHNORR
 library:
   source-dirs: src
   pkg-config-dependencies:
@@ -45,7 +64,6 @@ tests:
       - -threaded
       - -rtsopts
       - -with-rtsopts=-N
-      - -lsecp256k1
     verbatim:
       build-tool-depends:
           hspec-discover:hspec-discover
@@ -56,6 +74,8 @@ tests:
       - HUnit
     extra-lib-dirs:
       - /usr/local/lib
+    extra-libraries:
+      - secp256k1
 
 flags:
   schnorr:
