--- a/package.yaml
+++ b/package.yaml
@@ -1,7 +1,7 @@
 name: secp256k1-schnorr
 version: 0.0.1
-synopsis: Bindings for secp256k1
-description: Sign and verify signatures using the secp256k1 library.
+synopsis: Schnorr signatures for secp256k1
+description: Schnorr signatures using the secp256k1 library.
 category: Crypto
 author: Sascha-Oliver Prolic
 maintainer: saschaprolic@googlemail.com
@@ -20,31 +20,25 @@ dependencies:
   - base16 >=0.3.0.1
   - bytestring >=0.10.8 && <0.11
   - cereal >=0.5.4 && <0.6
+  - cryptohash-sha256 >= 0.11.102.1 && <0.12
   - entropy >=0.3.8 && <0.5
   - deepseq >=1.4.2 && <1.5
+  - DRBG >=0.5.5 && <0.6
   - hashable >=1.2.6 && <1.4
   - QuickCheck >=2.9.2 && <2.15
   - string-conversions >=0.4 && <0.5
   - unliftio-core >=0.1.0 && <0.3
-when:
-  - condition: flag(ecdh)
-    cpp-options: -DECDH
-  - condition: flag(schnorr)
-    cpp-options: -DSCHNORR
-  - condition: flag(recovery)
-    cpp-options: -DRECOVERY
-  - condition: flag(negate)
-    cpp-options: -DNEGATE
+  - utf8-string >= 1.0.2 && <1.1
 library:
   source-dirs: src
-  generated-exposed-modules:
-    - Paths_secp256k1_schnorr
   pkg-config-dependencies:
     - libsecp256k1
 tests:
   spec:
     main: Spec.hs
     source-dirs: test
+    pkg-config-dependencies:
+      - libsecp256k1
     ghc-options:
       - -threaded
       - -rtsopts
@@ -55,23 +49,5 @@ tests:
     dependencies:
       - hspec
       - secp256k1-schnorr
-      - monad-par
       - mtl
       - HUnit
-flags:
-  negate:
-    description: "Enable tweak negate"
-    manual: true
-    default: false
-  ecdh:
-    description: "Enable (experimental) ECDH APIs"
-    manual: true
-    default: false
-  schnorr:
-    description: "Enable BIP-340 (Schnorr) APIs"
-    manual: true
-    default: false
-  recovery:
-    description: "Enable signature key recovery APIs"
-    manual: true
-    default: false
