--- a/package.yaml
+++ b/package.yaml
@@ -27,6 +27,7 @@ dependencies:
   - hashable >=1.2.6 && <1.4
   - QuickCheck >=2.9.2 && <2.15
   - string-conversions >=0.4 && <0.5
+  - text
   - unliftio-core >=0.1.0 && <0.3
   - utf8-string >= 1.0.2 && <1.1
 library:
