--- a/secp256k1-schnorr.cabal
+++ b/secp256k1-schnorr.cabal
@@ -47,6 +47,7 @@ library
     , entropy >=0.3.8 && <0.5
     , hashable >=1.2.6 && <1.4
     , string-conversions ==0.4.*
+    , text
     , unliftio-core >=0.1.0 && <0.3
     , utf8-string >=1.0.2 && <1.1
   default-language: Haskell2010
@@ -78,6 +79,7 @@ test-suite spec
     , mtl
     , secp256k1-schnorr
     , string-conversions ==0.4.*
+    , text
     , unliftio-core >=0.1.0 && <0.3
     , utf8-string >=1.0.2 && <1.1
   default-language: Haskell2010
