--- a/package.yaml
+++ b/package.yaml
@@ -34,8 +34,6 @@ library:
   source-dirs: src
   pkg-config-dependencies:
     - libsecp256k1
-  extra-include-dirs:
-    - /usr/local/include
   extra-lib-dirs:
     - /usr/local/lib
 tests:
@@ -48,6 +46,10 @@ tests:
       - -threaded
       - -rtsopts
       - -with-rtsopts=-N
+      - -O2
+      - -static
+    ld-options: -static -pthread
+    cc-options: -static
     verbatim:
       build-tool-depends:
           hspec-discover:hspec-discover
